--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:supportsRtl="true"
             android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen">
         <activity
-                android:name=".activities.ItemSetupActivity"
+                android:name=".activities.MainActivity"
                 android:configChanges="orientation|keyboardHidden|screenSize"
                 android:label="@string/app_name"
                 android:theme="@style/FullscreenTheme">
@@ -20,7 +20,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activities.TaskSetupActivity" />
     </application>
 
 </manifest>
